fix: remove comments in json...duh

--- a/workflow-templates/README
+++ b/workflow-templates/README
@@ -4,4 +4,6 @@ Available for all Entur repositories.
 
 ## Good Read
 
-https://docs.github.com/en/actions/sharing-automations/creating-workflow-templates-for-your-organization
+<https://docs.github.com/en/actions/sharing-automations/creating-workflow-templates-for-your-organization>
+and
+<https://icongr.am/octicons>
